[gd_scene load_steps=26 format=3 uid="uid://beq3ihwlalhr1"]

[ext_resource type="Script" path="res://storybook/open_book.gd" id="1_0tetd"]
[ext_resource type="Texture2D" uid="uid://u0c8rwbhegx" path="res://img/x.png" id="2_yqduk"]
[ext_resource type="Texture2D" uid="uid://cl7fhvogq3eb3" path="res://img/x_pressed.png" id="3_kfopb"]
[ext_resource type="Texture2D" uid="uid://cdyrqy3cxl3an" path="res://storybook/page1.png" id="3_pueff"]
[ext_resource type="Texture2D" uid="uid://dfvjqap87pwqf" path="res://storybook/page1.5.png" id="4_alo1u"]
[ext_resource type="Texture2D" uid="uid://bwj424jbtu0vn" path="res://storybook/page2.png" id="5_5t8oh"]
[ext_resource type="Texture2D" uid="uid://dnky5p3bpo62" path="res://storybook/page3.png" id="6_q2nly"]
[ext_resource type="Texture2D" uid="uid://cxxoosupahds5" path="res://storybook/page4.png" id="7_qxi1r"]
[ext_resource type="Texture2D" uid="uid://bhlqn1x2lats2" path="res://storybook/page5.png" id="8_nc1ji"]
[ext_resource type="Texture2D" uid="uid://b4ojujkeakta5" path="res://storybook/page2-1.png" id="9_asidn"]
[ext_resource type="Texture2D" uid="uid://dnolv4mjbte3r" path="res://storybook/page6.png" id="9_lpw81"]
[ext_resource type="Texture2D" uid="uid://crm22317shkf1" path="res://img/arrow.png" id="9_qkioi"]
[ext_resource type="Texture2D" uid="uid://du58nlwurq8jd" path="res://storybook/page2-2.png" id="10_3cyyy"]
[ext_resource type="Texture2D" uid="uid://boi31j0307q2v" path="res://img/arrow_hover.png" id="10_p0yc6"]
[ext_resource type="Texture2D" uid="uid://cp8aiqt47c71k" path="res://storybook/page2-3.png" id="11_hsxmj"]
[ext_resource type="Texture2D" uid="uid://ca4rs3ntnatij" path="res://storybook/page2-4.png" id="12_edc2q"]
[ext_resource type="AudioStream" uid="uid://dd4s7s8rqfkqv" path="res://audio/page_turn.wav" id="12_jqtrn"]
[ext_resource type="Texture2D" uid="uid://bdo4e2yt0d0uw" path="res://storybook/page2-5.png" id="13_2h7j1"]
[ext_resource type="AudioStream" uid="uid://sx4gpvswx8c4" path="res://audio/alien_sounds.wav" id="14_n6dpt"]
[ext_resource type="Texture2D" uid="uid://c20rrpv73bwpc" path="res://storybook/page2-6.png" id="14_ogb0c"]
[ext_resource type="Texture2D" uid="uid://f5t2l01fj57r" path="res://storybook/page2-7.png" id="15_mjvgo"]
[ext_resource type="Texture2D" uid="uid://diwxpjdiovv3l" path="res://storybook/page2-8.png" id="16_e3sy5"]
[ext_resource type="Texture2D" uid="uid://dp0jwye21nobj" path="res://storybook/page2-9.png" id="17_nbekj"]
[ext_resource type="Texture2D" uid="uid://bchwdonhae00p" path="res://storybook/page2-11.png" id="18_qpslu"]
[ext_resource type="Texture2D" uid="uid://bv3dgl24b526w" path="res://storybook/page2-10.png" id="18_x8dr4"]

[node name="OpenBook" type="Node2D"]
script = ExtResource("1_0tetd")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 11.0
offset_top = 17.0
offset_right = 52.0
offset_bottom = 39.0
color = Color(0.332971, 0.200918, 6.59391e-06, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 12.0
offset_top = 18.0
offset_right = 51.0
offset_bottom = 38.0
color = Color(0.999999, 0.925862, 0.84488, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 31.0
offset_top = 18.0
offset_right = 32.0
offset_bottom = 38.0
color = Color(0.999999, 0.876938, 0.740762, 1)

[node name="Level1Pages" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Level1Pages"]
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page1" type="Sprite2D" parent="Level1Pages/ColorRect2"]
position = Vector2(19, 21)
texture = ExtResource("3_pueff")

[node name="Page1_5" type="Sprite2D" parent="Level1Pages"]
visible = false
position = Vector2(32, 28)
texture = ExtResource("4_alo1u")

[node name="ColorRect5" type="ColorRect" parent="Level1Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2" type="Sprite2D" parent="Level1Pages/ColorRect5"]
position = Vector2(19, 20)
texture = ExtResource("5_5t8oh")

[node name="ColorRect3" type="ColorRect" parent="Level1Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page3" type="Sprite2D" parent="Level1Pages/ColorRect3"]
position = Vector2(19, 21)
texture = ExtResource("6_q2nly")

[node name="ColorRect4" type="ColorRect" parent="Level1Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page4" type="Sprite2D" parent="Level1Pages/ColorRect4"]
position = Vector2(19, 21)
texture = ExtResource("7_qxi1r")

[node name="Page5" type="Sprite2D" parent="Level1Pages"]
visible = false
position = Vector2(32, 28)
texture = ExtResource("8_nc1ji")

[node name="ColorRect" type="ColorRect" parent="Level1Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page6" type="Sprite2D" parent="Level1Pages/ColorRect"]
position = Vector2(20, 21)
texture = ExtResource("9_lpw81")

[node name="Level2Pages" type="Node2D" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="Level2Pages"]
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-1" type="Sprite2D" parent="Level2Pages/ColorRect2"]
position = Vector2(20, 21)
texture = ExtResource("9_asidn")

[node name="Page2-2" type="Sprite2D" parent="Level2Pages"]
visible = false
position = Vector2(32, 28)
texture = ExtResource("10_3cyyy")

[node name="Page2-3" type="Sprite2D" parent="Level2Pages"]
visible = false
position = Vector2(32, 28)
texture = ExtResource("11_hsxmj")

[node name="Page2-4" type="Sprite2D" parent="Level2Pages"]
visible = false
position = Vector2(32, 28)
texture = ExtResource("12_edc2q")

[node name="ColorRect3" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-5" type="Sprite2D" parent="Level2Pages/ColorRect3"]
position = Vector2(20, 21)
texture = ExtResource("13_2h7j1")

[node name="ColorRect5" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-6" type="Sprite2D" parent="Level2Pages/ColorRect5"]
position = Vector2(20, 21)
texture = ExtResource("14_ogb0c")

[node name="ColorRect4" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-7" type="Sprite2D" parent="Level2Pages/ColorRect4"]
position = Vector2(20, 21)
texture = ExtResource("15_mjvgo")

[node name="ColorRect6" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-8" type="Sprite2D" parent="Level2Pages/ColorRect6"]
position = Vector2(20, 21)
texture = ExtResource("16_e3sy5")

[node name="ColorRect7" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-9" type="Sprite2D" parent="Level2Pages/ColorRect7"]
position = Vector2(19, 21)
texture = ExtResource("17_nbekj")

[node name="ColorRect8" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-10" type="Sprite2D" parent="Level2Pages/ColorRect8"]
position = Vector2(20, 21)
texture = ExtResource("18_x8dr4")

[node name="ColorRect9" type="ColorRect" parent="Level2Pages"]
visible = false
modulate = Color(0, 0, 0, 1)
clip_children = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Page2-11" type="Sprite2D" parent="Level2Pages/ColorRect9"]
position = Vector2(20, 22)
texture = ExtResource("18_qpslu")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 47.0
offset_top = 19.0
offset_right = 50.0
offset_bottom = 22.0
texture_normal = ExtResource("2_yqduk")
texture_pressed = ExtResource("3_kfopb")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 53.0
offset_top = 25.0
offset_right = 56.0
offset_bottom = 30.0
texture_normal = ExtResource("9_qkioi")
texture_pressed = ExtResource("10_p0yc6")

[node name="TextureButton3" type="TextureButton" parent="."]
visible = false
offset_left = 7.0
offset_top = 25.0
offset_right = 10.0
offset_bottom = 30.0
texture_normal = ExtResource("9_qkioi")
texture_pressed = ExtResource("10_p0yc6")
flip_h = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_jqtrn")
volume_db = 6.0

[node name="AlienNoises" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_n6dpt")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_down" from="TextureButton2" to="." method="_on_texture_button_2_button_down"]
[connection signal="button_down" from="TextureButton3" to="." method="_on_texture_button_3_button_down"]
